--- a/index.yaml
+++ b/index.yaml
@@ -1,9 +1,34 @@
 apiVersion: v1
 entries:
   higress:
-  - name: higress
-    version: 1.2.0
-    created: "2023-11-08T12:00:00Z"
-    description: A Helm chart for Higress Application
-    urls:
-    - https://cloud-yao.github.io/silk-road-chart/higress-1.2.0.tgz
+    - name: higress
+      version: 1.2.0
+      created: "2023-11-08T12:00:00Z"
+      description: A Helm chart for Higress Application
+      appVersion: 1.2.0
+      urls:
+        - https://cloud-yao.github.io/silk-road-chart/higress/higress-1.2.0.tgz
+  mysql:
+    - name: mysql
+      version: 8.0.35
+      created: "2023-11-08T12:00:00Z"
+      description: A Helm chart for Mysql Application
+      appVersion: 8.0.35
+      urls:
+        - https://cloud-yao.github.io/silk-road-chart/mysql/mysql-8.0.35.tgz
+  redis:
+    - name: redis
+      version: 7.2.3
+      created: "2023-11-08T12:00:00Z"
+      description: A Helm chart for Redis Application
+      appVersion: 7.2.3
+      urls:
+        - https://cloud-yao.github.io/silk-road-chart/redis/redis-7.2.3.tgz
+  redis-cluster:
+    - name: redis-cluster
+      version: 7.2.3
+      created: "2023-11-08T12:00:00Z"
+      description: A Helm chart for Redis Cluster Application
+      appVersion: 7.2.3
+      urls:
+        - https://cloud-yao.github.io/silk-road-chart/redis-cluster/redis-cluster-7.2.3.tgz
